// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`classList #1 1`] = `
Object {
  "Button": "c-Button-hash",
}
`;

exports[`classList #2 1`] = `
Object {
  "Button": "c-Button-hash",
  "PrimaryButton": "c-PrimaryButton-hash",
  "SuccessButton": "c-SuccessButton-hash",
  "span": "span.hey",
}
`;
